# mcp-playwright-agent

./: .env  .gitignore  Dockerfile  README.md  app.py  deployment.py  model.py  pyproject.toml
mcp_playwright_agent/: agent.py  prompt.py
mcp_playwright_agent/tools/: __init__.py  credentials.py  date.py  edi_search.py  utils.py
